<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:paddingLeft="2dp"
    android:paddingTop="2dp" >

    <ImageView
        android:id="@+id/imageView_thumb_topchude"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/dsc_img"
        android:src="@drawable/avata" />

    <Button
        android:id="@+id/button_toprank_chude"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/pie"
        android:text="@string/_1"
        android:textColor="#FFF"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_title_topchude"
        android:layout_below="@+id/textView_title_topchude"
        android:contentDescription="@string/dsc_img"
        android:src="@drawable/info" />

    <TextView
        android:id="@+id/textView_starttopchude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:text="@string/_0"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView_liketopchude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/textView_viewTopchude"
        android:text="@string/_89"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView_cmttopchude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_starttopchude"
        android:layout_alignTop="@+id/textView_liketopchude"
        android:text="@string/_2" />

    <TextView
        android:id="@+id/textView_viewTopchude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="20dp"
        android:text="@string/_1_4k"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView_title_topchude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/button_toprank_chude"
        android:text="@string/t_ng_nh_qu_nh"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar_loading_avata_topchude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_alignTop="@+id/imageView1" />

</RelativeLayout>