<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView_imgdown"
        android:layout_width="300dp"
        android:layout_height="356dp"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/dsc_img"
        android:src="@drawable/avata" />

    <TextView
        android:id="@+id/textView_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filename" />

        <EditText
            android:id="@+id/editText_namefile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_download"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <Button
        android:id="@+id/button_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_download" />

</LinearLayout>
